--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@
 [package]
 edition = "2021"
 name = "aarch64-paging"
-version = "0.3.0"
+version = "0.4.0"
 authors = [
     "Ard Biesheuvel <ardb@google.com>",
     "Andrew Walbran <qwandor@google.com>",
 ]
 description = "A library to manipulate AArch64 VMSA EL1 page tables."
+readme = "README.md"
 keywords = [
     "arm",
     "aarch64",
@@ -32,14 +33,13 @@ categories = [
 ]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/google/aarch64-paging"
-resolver = "2"
 
 [package.metadata.docs.rs]
 all-features = true
 default-target = "aarch64-unknown-none"
 
 [dependencies.bitflags]
-version = "1.3.2"
+version = "2.0.2"
 
 [features]
 alloc = []
